--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/cli": "~6.2.4",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
+    "@angular/compiler-cli": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
@@ -25,17 +26,21 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "path": "^0.12.7",
     "rxjs": "~6.2.0",
+    "typescript": "~2.9.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
+    "@angular/cli": "~6.2.4",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -49,7 +54,7 @@
     "typescript": "~2.9.2"
   },
   "engines": {
-    "npm" : "~5.6.0",
+    "npm": "~5.6.0",
     "node": "~8.11.3"
   }
 }
